--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Packages Rides</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="package.html">Packages Rides</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Pick & Drop</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Spin Around</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Dusk & Dawn</a></li>
