--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <h2>Yatree Destination</h2>
           <p>Make your Commute & Environment Friendly.</p>
           <a href="" class="btn-get-started ">Read More</a>
-          <a href="assets/img/Theindiacamps.pdf" attributes-list download>Download The Guide</a>
+         <!-- <a href="assets/img/Theindiacamps.pdf" attributes-list download>Download The Guide</a>-->
         </div>
       </div>
     </div>
